AV2 Changelog :: version a4.5

* Reduced penguin spawning (to 1/3)
* Reduced penguin drop rate (to 1/2)
* Wandering bison wanders near owner
* Bison toggles following via bison whistle
* Log bison deaths when killed by another player
* Mobs drop scrolls more often
* Lower earth wall by pressing Middle Mouse Button
* Air gust has 3x bigger radius
* Rebalance air bubble health
* Properly flag damage from AV2 as fire, projectile, etc when necessary

> Fix crash when killing entity without registered lang file name - FOR REAL THIS TIME
> Fix bug where fireball keeps exploding when held on ground
> Fix issue when executing certain commands on server
> Fix fire arc making fires when player-controlled
> Fix fire/water arc StatCtrls not removed on relog
> Fix floating block destroyed on place
> Fix issue when trying to place/thrown floating block when just picked up
> Fix airblade chainblade not working
> Fix water skate level 1 not preventing bending
> Fix airblade not doing more damage when levelled up
> Fix ability to create many fire arcs at once
> Fix bison always wanting to breed upon world reload
> Fix weirdness with bending switch order (z/c); bending in alphabetical order
> Fix attacking bison in any way (bow, floating block, etc) will make you mount it
> Fix rare crash when creating wall